--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   <body>
     <header>
       <nav>
-        <div id="logo">ShopLogo</div>
+        <img
+          src="https://placehold.co/200x80?text=ShopLogo"
+          alt="shop-logo"
+          class="shop-logo"
+        />
         <ul id="nav-list">
           <li>Home</li>
           <li>Our Menu</li>
@@ -21,10 +25,383 @@
         </ul>
       </nav>
     </header>
+    <!-- Offer Section -->
     <section id="offer-section" class="section">
-        <h2>Our offer section </h2>
-        <div id="offer-img"></div>
-        <button>Checkout All Offers</button>
+      <div id="offer-img"></div>
+      <button>Checkout All Offers</button>
+    </section>
+    <!-- Best Selling Section -->
+    <section id="our-menu">
+      <h2>Our Menu</h2>
+      <div class="best-seller">
+        <div class="menu-header">
+          <h3>Best Seller</h3>
+          <button>View all</button>
+        </div>
+        <div class="menu-items">
+          <div class="menu-card">
+            <img
+              src="https://placehold.co/200x100?text=BestSeller"
+              alt="Best Seller Image"
+            />
+            <div class="menu-card-container">
+              <h4>Best Seller Item 1</h4>
+              <p>Description of the best seller item.</p>
+              <span
+                >Price: <strike class="strike-price">$10.99</strike> $8.99
+                <span style="color: rgb(243, 57, 57); font-size: 13px"
+                  >10% off</span
+                ></span
+              >
+            </div>
+            <div class="add-to-cart-btn">Add to Card</div>
+          </div>
+          <div class="menu-card">
+            <img
+              src="https://placehold.co/200x100?text=BestSeller"
+              alt="Best Seller Image"
+            />
+            <div class="menu-card-container">
+              <h4>Best Seller Item 2</h4>
+              <p>Description of the best seller item.</p>
+              <span
+                >Price: <strike class="strike-price">$10.99</strike> $8.99
+                <span style="color: rgb(243, 57, 57); font-size: 13px"
+                  >10% off</span
+                ></span
+              >
+            </div>
+            <div class="add-to-cart-btn">Add to Card</div>
+          </div>
+          <div class="menu-card">
+            <img
+              src="https://placehold.co/200x100?text=BestSeller"
+              alt="Best Seller Image"
+            />
+            <div class="menu-card-container">
+              <h4>Best Seller Item 3</h4>
+              <p>Description of the best seller item.</p>
+              <span
+                >Price: <strike class="strike-price">$10.99</strike> $8.99
+                <span style="color: rgb(243, 57, 57); font-size: 13px"
+                  >10% off</span
+                ></span
+              >
+            </div>
+            <div class="add-to-cart-btn">Add to Card</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Trending Section -->
+    <section id="trending">
+      <div class="best-seller">
+        <div class="menu-header">
+          <h3>Trending</h3>
+          <button>View all</button>
+        </div>
+        <div class="menu-items">
+          <div class="menu-card">
+            <img
+              src="https://placehold.co/200x100?text=Trending"
+              alt="Trending Image"
+            />
+            <div class="menu-card-container">
+              <h4>Trending Item 1</h4>
+              <p>Description of the Trending Item.</p>
+              <span
+                >Price: <strike class="strike-price">$12.99</strike> $10.99
+                <span style="color: rgb(243, 57, 57); font-size: 13px"
+                  >10% off</span
+                ></span
+              >
+            </div>
+            <div class="add-to-cart-btn">Add to Card</div>
+          </div>
+          <div class="menu-card">
+            <img
+              src="https://placehold.co/200x100?text=Trending"
+              alt="Trending Image"
+            />
+            <div class="menu-card-container">
+              <h4>Trending Item 2</h4>
+              <p>Description of the Trending Item.</p>
+              <span
+                >Price: <strike class="strike-price">$12.99</strike> $10.99
+                <span style="color: rgb(243, 57, 57); font-size: 13px"
+                  >10% off</span
+                ></span
+              >
+            </div>
+            <div class="add-to-cart-btn">Add to Card</div>
+          </div>
+          <div class="menu-card">
+            <img
+              src="https://placehold.co/200x100?text=Trending"
+              alt="Trending Image"
+            />
+            <div class="menu-card-container">
+              <h4>Trending Item 3</h4>
+              <p>Description of the Trending Item.</p>
+              <span
+                >Price: <strike class="strike-price">$12.99</strike> $10.99
+                <span style="color: rgb(243, 57, 57); font-size: 13px"
+                  >10% off</span
+                ></span
+              >
+            </div>
+            <div class="add-to-cart-btn">Add to Card</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Starters Section -->
+    <section id="Starters">
+      <div class="best-seller">
+        <div class="menu-header">
+          <h3>Starters</h3>
+          <button>View all</button>
+        </div>
+        <div class="menu-items">
+          <div class="menu-card">
+            <img
+              src="https://placehold.co/200x100?text=Starters"
+              alt="Starters Image"
+            />
+            <div class="menu-card-container">
+              <h4>Starters Item 1</h4>
+              <p>Description of the Starters Item.</p>
+              <span
+                >Price: <strike class="strike-price">$12.99</strike> $10.99
+                <span style="color: rgb(243, 57, 57); font-size: 13px"
+                  >10% off</span
+                ></span
+              >
+            </div>
+            <div class="add-to-cart-btn">Add to Card</div>
+          </div>
+          <div class="menu-card">
+            <img
+              src="https://placehold.co/200x100?text=Starters"
+              alt="Starters Image"
+            />
+            <div class="menu-card-container">
+              <h4>Starters Item 2</h4>
+              <p>Description of the Starters Item.</p>
+              <span
+                >Price: <strike class="strike-price">$12.99</strike> $10.99
+                <span style="color: rgb(243, 57, 57); font-size: 13px"
+                  >10% off</span
+                ></span
+              >
+            </div>
+            <div class="add-to-cart-btn">Add to Card</div>
+          </div>
+          <div class="menu-card">
+            <img
+              src="https://placehold.co/200x100?text=Starters"
+              alt="Starters Image"
+            />
+            <div class="menu-card-container">
+              <h4>Starters Item 3</h4>
+              <p>Description of the Starters Item.</p>
+              <span
+                >Price: <strike class="strike-price">$12.99</strike> $10.99
+                <span style="color: rgb(243, 57, 57); font-size: 13px"
+                  >10% off</span
+                ></span
+              >
+            </div>
+            <div class="add-to-cart-btn">Add to Card</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Beverages -->
+    <section id="Beverages">
+      <div class="best-seller">
+        <div class="menu-header">
+          <h3>Beverages</h3>
+          <button>View all</button>
+        </div>
+        <div class="menu-items">
+          <div class="menu-card">
+            <img
+              src="https://placehold.co/200x100?text=Beverages"
+              alt="Beverages Image"
+            />
+            <div class="menu-card-container">
+              <h4>Beverages Item 1</h4>
+              <p>Description of the Beverages Item.</p>
+              <span
+                >Price: <strike class="strike-price">$3.99</strike> $2.99
+                <span style="color: rgb(243, 57, 57); font-size: 13px"
+                  >10% off</span
+                ></span
+              >
+            </div>
+            <div class="add-to-cart-btn">Add to Card</div>
+          </div>
+          <div class="menu-card">
+            <img
+              src="https://placehold.co/200x100?text=Beverages"
+              alt="Beverages Image"
+            />
+            <div class="menu-card-container">
+              <h4>Beverages Item 2</h4>
+              <p>Description of the Beverages Item.</p>
+              <span
+                >Price: <strike class="strike-price">$3.99</strike> $2.99
+                <span style="color: rgb(243, 57, 57); font-size: 13px"
+                  >10% off</span
+                ></span
+              >
+            </div>
+            <div class="add-to-cart-btn">Add to Card</div>
+          </div>
+          <div class="menu-card">
+            <img
+              src="https://placehold.co/200x100?text=Beverages"
+              alt="Beverages Image"
+            />
+            <div class="menu-card-container">
+              <h4>Beverages Item 3</h4>
+              <p>Description of the Beverages Item.</p>
+              <span
+                >Price: <strike class="strike-price">$3.99</strike> $2.99
+                <span style="color: rgb(243, 57, 57); font-size: 13px"
+                  >10% off</span
+                ></span
+              >
+            </div>
+            <div class="add-to-cart-btn">Add to Card</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Main Course -->
+    <section id="Main Course">
+      <div class="best-seller">
+        <div class="menu-header">
+          <h3>Main Course</h3>
+          <button>View all</button>
+        </div>
+        <div class="menu-items">
+          <div class="menu-card">
+            <img
+              src="https://placehold.co/200x100?text=Main Course"
+              alt="Main Course Image"
+            />
+            <div class="menu-card-container">
+              <h4>Main Course Item 1</h4>
+              <p>Description of the Main Course Item.</p>
+              <span
+                >Price: <strike class="strike-price">$15.99</strike> $14.99
+                <span style="color: rgb(243, 57, 57); font-size: 13px"
+                  >10% off</span
+                ></span
+              >
+            </div>
+            <div class="add-to-cart-btn">Add to Card</div>
+          </div>
+          <div class="menu-card">
+            <img
+              src="https://placehold.co/200x100?text=Main Course"
+              alt="Main Course Image"
+            />
+            <div class="menu-card-container">
+              <h4>Main Course Item 2</h4>
+              <p>Description of the Main Course Item.</p>
+              <span
+                >Price: <strike class="strike-price">$15.99</strike> $210.99
+                <span style="color: rgb(243, 57, 57); font-size: 13px"
+                  >10% off</span
+                ></span
+              >
+            </div>
+            <div class="add-to-cart-btn">Add to Card</div>
+          </div>
+          <div class="menu-card">
+            <img
+              src="https://placehold.co/200x100?text=Main Course"
+              alt="Main Course Image"
+            />
+            <div class="menu-card-container">
+              <h4>Main Course Item 3</h4>
+              <p>Description of the Main Course Item.</p>
+              <span
+                >Price: <strike class="strike-price">$15.99</strike> $14.99
+                <span style="color: rgb(243, 57, 57); font-size: 13px"
+                  >10% off</span
+                ></span
+              >
+            </div>
+            <div class="add-to-cart-btn">Add to Card</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Combos -->
+    <section id="Combos">
+      <div class="best-seller">
+        <div class="menu-header">
+          <h3>Combos</h3>
+          <button>View all</button>
+        </div>
+        <div class="menu-items">
+          <div class="menu-card">
+            <img
+              src="https://placehold.co/200x100?text=Combos"
+              alt="Combos Image"
+            />
+            <div class="menu-card-container">
+              <h4>Combos Item 1</h4>
+              <p>Description of the Combos Item.</p>
+              <span
+                >Price: <strike class="strike-price">$20.99</strike> $19.99
+                <span style="color: rgb(243, 57, 57); font-size: 13px"
+                  >10% off</span
+                ></span
+              >
+            </div>
+            <div class="add-to-cart-btn">Add to Card</div>
+          </div>
+          <div class="menu-card">
+            <img
+              src="https://placehold.co/200x100?text=Combos"
+              alt="Combos Image"
+            />
+            <div class="menu-card-container">
+              <h4>Combos Item 2</h4>
+              <p>Description of the Combos Item.</p>
+              <span
+                >Price: <strike class="strike-price">$20.99</strike> $19.99
+                <span style="color: rgb(243, 57, 57); font-size: 13px"
+                  >10% off</span
+                ></span
+              >
+            </div>
+            <div class="add-to-cart-btn">Add to Card</div>
+          </div>
+          <div class="menu-card">
+            <img
+              src="https://placehold.co/200x100?text=Combos"
+              alt="Combos Image"
+            />
+            <div class="menu-card-container">
+              <h4>Combos Item 3</h4>
+              <p>Description of the Combos Item.</p>
+              <span
+                >Price: <strike class="strike-price">$20.99</strike> $19.99
+                <span style="color: rgb(243, 57, 57); font-size: 13px"
+                  >10% off</span
+                ></span
+              >
+            </div>
+            <div class="add-to-cart-btn">Add to Card</div>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
-</html>
+</html> 
