--- a/index.html
+++ b/index.html
@@ -403,5 +403,44 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div id="footer-container">
+        <img
+          src="https://placehold.co/200x80?text=ShopLogo"
+          alt="shop-logo"
+          class="shop-logo"
+        />
+        <div class="quick-links color-red">
+          <h3>Quick Links</h3>
+          <ul class="footer-links">
+            <li><a href="#menu">Our Menu</a></li>
+            <li><a href="#offers">Our Offers</a></li>
+            <li><a href="#about">Know What We Have Achieved</a></li>
+          </ul>
+        </div>
+        <div class="footer-section social-subscribe color-red">
+          <h3>Wanna Get Updated with Our <br> Exciting Offers?</h3>
+          <p>Follow us on:</p>
+          <p>Instagram | Facebook | Twitter</p>
+          <hr />
+          <div class="subscribe-form">
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Subscribe for daily exciting offers"
+            />
+            <button>Subscribe</button>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>
+          <a href="#terms"> Terms & Conditions </a> |
+          <a href="#privacy"> Privacy Policy </a> |
+          <a href="rights"> All Rights Reserved </a>
+        </p>
+      </div>
+    </footer>
   </body>
-</html> 
+</html>
