Added login setup

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
           <li>Know Us More</li>
           <li>Your Order</li>
           <li>Cart(0)</li>
-          <li><button id="login-button">Login/Signup</button></li>
+          <a href="login.html">
+            <li><button id="login-button">Login/signup</button></li></a
+          >
         </ul>
       </nav>
     </header>
@@ -419,7 +421,10 @@
           </ul>
         </div>
         <div class="footer-section social-subscribe color-red">
-          <h3>Wanna Get Updated with Our <br> Exciting Offers?</h3>
+          <h3>
+            Wanna Get Updated with Our <br />
+            Exciting Offers?
+          </h3>
           <p>Follow us on:</p>
           <p>Instagram | Facebook | Twitter</p>
           <hr />
